fixed the overlapping between classes back heart and bingo

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ p {
   }
 
   .heart {
-    position: absolute;
+    position: fixed;
     margin: auto;
     top: 0;
     right: 0;
@@ -33,8 +33,9 @@ p {
     width: 50px;
     transform: rotate(-45deg);
     animation-name: beat;
-    animation-duration: 1s;
-
+    animation-duration: 500s;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(0, 0, 0.28, 1);
   }
   .heart:after {
     background-color: pink;
@@ -60,14 +61,19 @@ p {
   @keyframes backdiv {
     50% {
       background: #ffe6f2;
+
     }
   }
 
   @keyframes beat {
     0% {
       transform: scale(1) rotate(-45deg);
+      top: 0px;
+      left: 0px;
     }
     50% {
       transform: scale(0.6) rotate(-45deg);
+      top: 249px;
+      left: 400px;
     }
   }
